created string Interpolation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
   <div app-component-selector></div>
+  <app-stringinterpolation></app-stringinterpolation>
 </div>
 <router-outlet></router-outlet>
