--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="container-fluid">
   <div app-component-selector></div>
   <app-stringinterpolation></app-stringinterpolation>
+  <app-propertybinding></app-propertybinding>
+  <app-eventbinding></app-eventbinding>
 </div>
 <router-outlet></router-outlet>
