--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
   <app-stringinterpolation></app-stringinterpolation>
   <app-propertybinding></app-propertybinding>
   <app-eventbinding></app-eventbinding>
+  <app-twowaybinding></app-twowaybinding>
 </div>
 <router-outlet></router-outlet>
