ngif and ngfor added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
   <app-propertybinding></app-propertybinding>
   <app-eventbinding></app-eventbinding>
   <app-twowaybinding></app-twowaybinding>
+  <app-ngfor-ngif></app-ngfor-ngif>
 </div>
 <router-outlet></router-outlet>
